--- a/diary/生活焦虑解除记录.md
+++ b/diary/生活焦虑解除记录.md
@@ -1128,6 +1128,7 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 * 不碰垃圾信息源和游戏是绝对正确的, just do it, 吃完饭去睡觉了;
 3. 我不该上知乎吵架，不该看知乎
 * 但我学会了，文明地表达自己的不满，文明用语
+4. 我好累呀，吃饭的时候要放松解压
 
 
 # 生活压力源的种类
