--- a/diary/工作问题+焦虑记录.md
+++ b/diary/工作问题+焦虑记录.md
@@ -43,6 +43,7 @@
 
 <img width="705" height="181" alt="image" src="https://github.com/user-attachments/assets/4d9f9711-e2ee-4e95-87f3-020986c91bba" />
 
+2. 我跑代码、但比赛的时候真的一直失败，这让我很多时候不想科研，要勇于面对失败，我爱科研虽然我经常失败，加油!
 
 # 经验
 1. 避免承担能力之外的责任，这是导致压力失控的重要原因
