--- a/diary/生活焦虑解除记录.md
+++ b/diary/生活焦虑解除记录.md
@@ -1129,6 +1129,7 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 3. 我不该上知乎吵架，不该看知乎
 * 但我学会了，文明地表达自己的不满，文明用语
 4. 我好累呀，吃饭的时候要放松解压
+5. 失败的次数太多，我为什么连游戏都克服不了，
 
 
 # 生活压力源的种类
