--- a/diary/生活中每天让我快乐的3个瞬间和日记.md
+++ b/diary/生活中每天让我快乐的3个瞬间和日记.md
@@ -834,7 +834,7 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 * 我爱睡觉!
 2. bonus: 我又克服了一次游戏突触，干就完了
 * 但是有点慢，要继续努力
-
+3. bonus: 5杯水
 
 
 # 生活习惯
