--- a/diary/周报26&目标管理.md
+++ b/diary/周报26&目标管理.md
@@ -21,6 +21,7 @@
 14. 过去打游戏大概占据了我30%的时间，扯皮占20%，正常这俩都要戒掉
 15. 我不想记录，但是失控的原因正是拒绝反省，拒绝记录，必须记录, 反省 $\in$ 记录
 16. 我的理想是让家里人过得更好，有所创造，不是找女朋友
+17. 我很菜，但是没有办法，只能做到自己的最好，加油!
 
 
 # week1
