--- a/diary/工作问题+焦虑记录.md
+++ b/diary/工作问题+焦虑记录.md
@@ -51,6 +51,11 @@
 * CV还要看级联的又臭又长的代码，不过原理挺简单的;
 * 我还没想出来新的cv idea，为此得继续多看论文总结;
 
+# 2.1
+1. 我现在睡不着，但是觉得游戏无聊死了，一下子不知道干嘛了,算了我爱睡觉;
+* 习惯性地想看h片，但是也觉得没意思;
+* 我想看论文，但是要动脑，先睡觉吧;
+
 
 # 经验
 1. 避免承担能力之外的责任，这是导致压力失控的重要原因
