--- a/diary/生活指南.md
+++ b/diary/生活指南.md
@@ -40,3 +40,6 @@ https://www.binance.com/zh-CN/square/post/32685512052673
 1. 文明地表达自己的不满，文明用语
 
 
+# 如何成为一个乐于助人的人?
+> 总是希望能给身边的人(比如同学学弟学长们)提供帮助，但是每到要帮别人做事的时候，就发现自己老是没有时间，但是另一方面自己私底下却经常无意识地浪费时间，感觉乐于助人并没有那么简单，我其实是很自私的
+
