--- a/diary/生活焦虑解除记录.md
+++ b/diary/生活焦虑解除记录.md
@@ -1131,6 +1131,9 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 4. 我好累呀，吃饭的时候要放松解压
 5. 失败的次数太多，都有点不相信能不打游戏了，我为什么连游戏都克服不了，
 
+# 2.1
+1. 我又在知乎上和s,b吵架了, 该干嘛干嘛
+
 
 # 生活压力源的种类
 1. 身体不适
