--- a/diary/工作问题+焦虑记录.md
+++ b/diary/工作问题+焦虑记录.md
@@ -57,7 +57,7 @@
 * 我想看论文，但是要动脑，先睡觉吧;
 2. 我不知道为什么不要和别人吵架，但是
 * **我知道这是正确的忠告，执行就完了，不舒服是正常的，专注目标**
-
+* 直接忽略，实在不满的也要文明反驳，
 
 # 经验
 1. 避免承担能力之外的责任，这是导致压力失控的重要原因
