--- a/diary/工作中每天让我快乐的3个瞬间.md
+++ b/diary/工作中每天让我快乐的3个瞬间.md
@@ -42,6 +42,10 @@
 7. bonus: build navigation rightly😄😃
 <img width="945" height="427" alt="image" src="https://github.com/user-attachments/assets/86e88b5d-c22f-45ad-b53b-6007db33f67e" />
 
+# 2/1
+1. bonus: 今天意识到，不和别人吵架这条经验，也是干就完了
+2. bonus: 今天发现了晚上11点不要干活这条经验
+
 
 # 工作习惯
 1. 中午回来坚持看知识星球, 然后睡觉
