--- a/diary/生活中每天让我快乐的3个瞬间和日记.md
+++ b/diary/生活中每天让我快乐的3个瞬间和日记.md
@@ -837,7 +837,9 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 3. bonus: 5杯水
 
 # 2.1
-1. bonus: 3杯水
+1. bonus: 上下午3杯水
+2. bonus: 晚上两杯水
+3. bonus: 晚上冥想训练10min+1
 
 
 # 生活习惯
