--- a/diary/生活焦虑解除记录.md
+++ b/diary/生活焦虑解除记录.md
@@ -1138,6 +1138,11 @@ What Is The Best 3D Scene Representation for Robotics? From Geometric to Foundat
 3. 晚了，我现在没有精力刷牙洗脸了，刚才吃了8小包豆腐干
 4. 我不知道为什么要停下来，刷牙洗脸睡觉，干就完了，tmd
 
+# 2.2
+1. 昨晚睡前折腾看了好久nba，没能保养好状态
+* 对策：累就累点，直接洗漱上床睡觉;
+
+
 
 # 生活压力源的种类
 1. 身体不适
