--- a/diary/生活中每天让我快乐的3个瞬间和日记.md
+++ b/diary/生活中每天让我快乐的3个瞬间和日记.md
@@ -842,7 +842,7 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 3. bonus: 晚上冥想训练10min+1
 
 # 2.2
-1. 
+1. bonus: 早起一杯水
 
 # 生活习惯
 1. 早上7:30起床
