--- a/diary/生活中每天让我快乐的3个瞬间和日记.md
+++ b/diary/生活中每天让我快乐的3个瞬间和日记.md
@@ -845,7 +845,7 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 1. bonus: 早起一杯水
 2. bonus: 上午两杯水
 * 继续努力保持好习惯
-
+* 加油，中午继续马上睡觉，晚上也一样，冲鸭;
 
 
 # 生活习惯
