--- a/diary/理想宣言.md
+++ b/diary/理想宣言.md
@@ -1,3 +1,5 @@
 1. 我很菜，但是没有办法，只能做到自己的最好，加油!
 2. 我绝不碰垃圾游戏和信息源，我只是觉得我喜欢的科研，我投入的时间不够多了，哎真难过
-3. 
+3. 没有女朋友也许会难过，我今天发现，不能实现理想也一样会难过，不能让爸妈过上体面的生活也一样会难过，
+* 只是在这些难过里，选择自己能控制的，重要的
+* 按照拓扑排序，我得先实现理想，再让爸妈过上体面的生活，我其实不是很需要女朋友，只是习惯而已，冲鸭，加油!
