--- a/diary/生活中每天让我快乐的3个瞬间和日记.md
+++ b/diary/生活中每天让我快乐的3个瞬间和日记.md
@@ -864,5 +864,8 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 8. 工作间隙深蹲\爬楼梯\散步放松
 9. 周日下午拿来锻炼(早上设置训练时间更充分)
 10. 睡前不吃东西，避免影响睡眠
-11. 把看知乎b站等垃圾信息的时间，拿来看论文和知识点
+11. 不要看知乎b站等垃圾信息
+12. 拿来看论文和知识点
+
+
 
