--- a/diary/生活中每天让我快乐的3个瞬间和日记.md
+++ b/diary/生活中每天让我快乐的3个瞬间和日记.md
@@ -861,6 +861,10 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 * md，睡眠剥夺，一直头晕，虽然指标不全面，但是承认别人优秀也没w了哈哈哈
 2. 继续努力，冲呀，好慢好慢
 
+# 2.6
+1. 真的全是惨了fw我要认可的垃圾信息，直接不看是对的，不要和这些猪皮吵架;
+
+
 
 # 生活习惯
 1. 早上7:30起床
