--- a/diary/生活中每天让我快乐的3个瞬间和日记.md
+++ b/diary/生活中每天让我快乐的3个瞬间和日记.md
@@ -863,7 +863,8 @@ https://zread.ai/Pihz-26/LVI-SAM_ROS2/include/visual_odometry/visual_estimator/f
 
 # 2.6
 1. 真的全是惨了fw我要认可的垃圾信息，直接不看是对的，不要和这些猪皮吵架;
-
+2. 我还是没训练出来，我好难过呀;
+* 
 
 
 # 生活习惯
