--- a/diary/生活指南.md
+++ b/diary/生活指南.md
@@ -33,6 +33,9 @@ https://www.binance.com/zh-CN/square/post/32685512052673
 3. 睡觉真让我开心~
 * 我爱睡觉，如果温度和枕头合适的话，放松全身超级舒适
 
+# 不要看自媒体app
+* 真的全是惨了fw我要认可的垃圾信息，直接不看是对的，不要和这些猪皮吵架;
+
 
 # 睡不着怎么办?
 1. 我爱睡觉!
