--- a/diary/解压日记.md
+++ b/diary/解压日记.md
@@ -21,3 +21,10 @@
 
 # 2.2
 - [ ] 
+
+# 2.12
+1. 我刚才因为玩不好英雄又想看直播，之前是熬夜没精力想，
+* 玩不好就玩不好吧，过渡的好胜心是有毒的，没什么用，专注目标就行了
+* 我发现我还是可能牺牲，因为我的问题从来不在于没有在年恒却的分析和观念，而在于没有精力运用正确的分析和观念，加油!
+
+2. 
